<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OSMHunter</string>
    <string name="hello_world">Hello world!</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="edit">Edit</string>
    <string name="action_settings">Settings</string>
    <string name="error_api">API request failed.</string>
    <string name="error_api_authorization">API authorization failed.</string>
    <string name="error_zoom">Zoom in to see buildings.</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="title_activity_attribute_change">Edit attributes</string>
    <string name="attribute_change_navigate">Navigate to the building</string>
    <string name="attribute_change_save">Save attributes</string>
    <string name="attribute_prefilled_indicator">This field is automatically prefilled. Please validate the data.</string>
    <string name="attribute_change_nothing_changed">Please change any field before saving!</string>
    <string name="attribute_change_finished">Attributes saved!</string>
    <string name="title_activity_map">Discover</string>
    <string name="map_location">My location</string>

    <plurals name="points">
        <item quantity="zero">no Points</item>
        <item quantity="one">one Point</item>
        <item quantity="other">%d Points</item>
    </plurals>

    <string name="title_activity_nearby_buildings">I\'m feeling lucky</string>
    <string name="loading">Loading …</string>
    <string name="title_activity_about">About</string>

</resources>
